I'm doing  Rodape,  test for smartphone

--- a/style/style.css
+++ b/style/style.css
@@ -100,9 +100,6 @@ header #container img{
     width: 23px;
     height: 30px;
     margin-left: 0px;
-   
-
-
 }
 
 
@@ -136,7 +133,6 @@ main section .motel-name{
     left: 35%;
     transform: translate(-50%, 0%);
     position:absolute;
-   
 }
 main section h1{
     font-size: 12px;
@@ -176,21 +172,35 @@ main section .view-suit a{
 
 
 footer{
-    position: fixed;
     width: 100%;
-    height: 40px;
+    height: 10vh;
     box-shadow:0px 1px 10px 1px rgba(0, 0, 0, 0.192);
     background-color: rgb(249, 249, 250);
     border-radius: 10px 10px 0px 0px;
     bottom: 0;
     left: 50% ;
     transform: translate(-50%, -0%);
-    position: fixed
+    position: fixed;
+    
+}
+footer nav {
+    padding-top: 12px;
+    width:100%;
+    text-align: center;
+}
+footer nav ul{
+    display:inline-block;
+}
+footer nav ul li{
+    display:inline;
+    margin: 2.5vh;
+}
 
+footer nav img{
+    width: 8vw;
+    min-width: 10px;
+   
 }
-footer nav li{
-    display: inline;
-    line-height: 40px;
-}
+
 
 
