--- a/style/style.css
+++ b/style/style.css
@@ -78,26 +78,53 @@ header div#search div > img{
     border-radius: 50px;  
 }
 header div#container{
-    width: 245px;
+    width: 259px;
     height: 60px;
     overflow: hidden;
     position: relative;
 }
 header #container .my-slider{
     position: absolute;
-    top: 20px;
+    top: 10px;
 }
 .tns-visually-hidden, .tns-nav  { /* retirado texto de "quantidade se slides ex: 1 de 5..." do header  */
-    display: none; 
+    display:none; 
 }
 header #container .my-slider>div{
-    display:inline-block;
+    display:inline-block;    
 }
 header #container img{
-    width: 30px;
-    height: 34px;
-    margin-left: 0px;
+    width: 18px;
+    height: 24px;
+    margin-left: 10px;
 }
+header #container p, a{
+    color: black;
+    text-decoration: none;
+    font-size: 0.8em;
+    text-align: center;
+}
+header .arrow-left{
+    float: left;
+    position: absolute;
+    top:55%;
+    left: 7%;
+    transform: translate(-50%, 50%); 
+}
+header  .arrow-left >img{
+    width: 7px;
+}
+header .arrow-right{
+    position: absolute;
+    float: right;
+    top:55%;
+    right: 7%;
+    transform: translate(0%, 50%);
+}
+header .arrow-right >img{
+    width: 7px;
+}
+
 
 main{
     background-color:transparent;
