--- a/style/style.css
+++ b/style/style.css
@@ -72,42 +72,51 @@ header div#search div{
     border: 1.5px solid rgb(143, 143, 143);
 }
 header div#search div > img{
-    top: 0;
+    top:0;
     right:0;
     transform: translate(-5%,20%);
-    border-radius: 50px;  
+    border-radius: 50px;
 }
 header div#container{
-    width: 259px;
+    width: 80%;
     height: 60px;
     overflow: hidden;
     position: relative;
-}
-header #container .my-slider{
-    position: absolute;
-    top: 10px;
-}
-.tns-visually-hidden, .tns-nav  { /* retirado texto de "quantidade se slides ex: 1 de 5..." do header  */
-    display:none; 
-}
-header #container .my-slider>div{
-    display:inline-block;    
-}
-header #container img{
-    width: 18px;
-    height: 24px;
-    margin-left: 12px;
     
 }
-header #container p, a{
-    color: black;
-    text-decoration: none;
-    margin-right: 1px;
-    font-size: 1.5vh;
+header div#container .my-slider{
+    top: 10px;
+    position: absolute;
+    left: 36.5%; 
+}
+.tns-visually-hidden, .tns-nav  { /* retirado texto de "quantidade se slides ex: 1 de 5..." do header  */
+    display:none;
+}
+header #container .my-slider>div{
+    display:inline-block;
+    height: 40px;
+    position: relative;
     text-align: center;
-    font-weight: bold;
+}
+header #container  img{
+    width: 18px;
+    height: 24px;
+   text-align: center;
+   display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
+header #container p, a{
+    text-decoration: none;
+    margin-top: 4px;
+    color: black;
+    text-align: center;  
+}
+header #container .my-slider p{
+    font-size: 3.4vw;
+
+}
 header .arrow-left{
     float: left;
     position: absolute;
@@ -182,10 +191,11 @@ main section .view-suit{
     position: absolute;
     text-align: center;
     margin-left: 0%;
-    width: 30vw;
+    width: 20vw;
+    min-width:30px;
     bottom: 5%;
-    left: 85%;
-    transform: translate(-50%, 0%);
+    right: 5px;
+    transform: translate(0%, 20%);
 }
 main section .view-suit p{
     font-size: 12px;
@@ -201,7 +211,7 @@ main section .view-suit a{
 
 footer{
     width: 100%;
-    height: 10vh;
+    height: 84px;
     box-shadow:0px 1px 10px 1px rgba(0, 0, 0, 0.192);
     background-color: rgb(249, 249, 250);
     border-radius: 10px 10px 0px 0px;
@@ -212,23 +222,40 @@ footer{
 }
 footer nav {
     width:100%;
-    text-align: center;
+    height: 30px;
     display: block;
+    position: relative;
+    margin: auto;
+    
 }
 footer nav ul{
+    width: 100%;
     display: block;
+    position: absolute;
+    text-align: center;
+    padding-top: 17px;
+   
+    
 }
 footer nav ul li{
     display:inline-block;
-    margin-top: 1.5vh;
-    padding-left: 2vh;
-    padding-right: 2vh;
+    text-align: center;
+    width: 17vw;
+    margin-block-end: auto;
+    margin-left:1%;
+    margin-right:1%;  
 }
 footer nav img{
-    width: 5.9vw;
-    min-width: 15px;
-    max-width: 20px;
+    width: 10vw;
+    min-width: 18px;
+    max-width: 35px;
 }
+footer nav li p{
+    font-size:3.4vw ;
+    height: 15px;
+    width: 18vw;
+}
+
 
 /*footer nav ul li.favorites  img{
     width:9vw;
