--- a/style-page-favorites.css
+++ b/style-page-favorites.css
@@ -1,3 +1,16 @@
 
 
 
+@charset "UTF-8";
+
+main{
+    margin-bottom: 0;
+}
+
+
+
+main > h1{
+    font-size: 20px;
+    background-color: aquamarine;
+    margin-left: 23px;
+}
