--- a/style-page-favorites.css
+++ b/style-page-favorites.css
@@ -1,16 +1,17 @@
-
-
-
 @charset "UTF-8";
 
-main{
-    margin-bottom: 0;
+html, body{
+    position: relative;
 }
 
-
+main{
+    position: absolute;
+    top: 50px;
+    left: 0px;
+}
 
 main > h1{
     font-size: 20px;
-    background-color: aquamarine;
     margin-left: 23px;
+    margin-bottom: 20px;
 }
