--- a/style/style-page-favorites.css
+++ b/style/style-page-favorites.css
@@ -6,9 +6,7 @@
 header {
    height: 70px;
    background-color:transparent;
-   box-shadow:none;
-
-    
+   box-shadow:none;  
 }
 header h1{
     font-size:20px ;
@@ -20,5 +18,11 @@ header h1{
 }
 main{
     margin-top: -40px;
+    background-color: blue;
+    
 }
+main footer{
+    display: block;
+}
+
 
