--- a/style/style-page-map.css
+++ b/style/style-page-map.css
@@ -15,10 +15,19 @@ header {
    
  }
  main{
-    margin-top: -40px;
-}
+    top:90px;
+    left: 50% ;
+    transform: translate(-50%, 0%);
+ }
+
 main section{
+    max-width:100% ;
     height: 80%;
-    
-    
+    overflow: hidden;
+      
+}
+main iframe{
+    width: 100%;
+    height: 80vh;
+    background-color: rgb(233, 223, 223);
 }
