--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@
 }
 
 html body{
-    background-color: rgb(223, 220, 220);
+    background-color: rgba(231, 229, 229, 0.5);
     height: 100vh;
     width: 100vw;
     font-family: 'Inter', sans-serif;
