--- a/style/style-my-account.css
+++ b/style/style-my-account.css
@@ -2,7 +2,7 @@
 
 
 main section{
-    width: 50%;
+    width: 65%;
     top:25%;
     left: 0%;
     transform: translate(0%,-50%);
@@ -15,26 +15,27 @@ main section h1{
     margin-top:12px;
     margin-bottom: 15px; 
 }
-main section form div{
+main section form {
     width: 100%;
     height: 35px;
     margin-bottom: 10px;
 }
-main section form div input{
-    width: 50vw;
+main section form input{
+    width: 65vw;
     height:35px ;
     border-radius: 16px;
     background-color:D9D9D9;
     border: 0;
+    margin-bottom: 10px;
 }
-main section form div input#user,input#password {
+main section form input#user,input#password {
     font-size: 15px;
     padding-left: 15px;
 }
-main section form div input::placeholder{
+main section form input::placeholder{
     color: black;
 }
-main section form div input#enter{
+main section form input#enter{
     font-size: 16px;
 }
 main section form a p{
