--- a/style/style-my-account.css
+++ b/style/style-my-account.css
@@ -9,6 +9,7 @@ main section{
     overflow: hidden;
     box-shadow: none;
     background-color: transparent;
+    
 }
 main section h1{
     font-size: 3.3vw;
@@ -21,12 +22,13 @@ main section form {
     margin-bottom: 10px;
 }
 main section form input{
-    width: 65vw;
+    width: 64vw;
     height:35px ;
     border-radius: 16px;
     background-color:D9D9D9;
     border: 0;
     margin-bottom: 10px;
+    margin-left: 2px;
 }
 main section form input#user,input#password {
     font-size: 15px;
